--- a/aboutme.html
+++ b/aboutme.html
@@ -7,5 +7,6 @@
         <body>
             <h1>Hoi</h1>
             <p>Ik ben de beste.</p>
+            <p>en de coolste</p>
         </body>
     </html>
